set(
	SGE_FONT_FILES
	libs/font/include/sge/font/added.hpp
	libs/font/include/sge/font/added_fwd.hpp
	libs/font/include/sge/font/added_unique_ptr.hpp
	libs/font/include/sge/font/align_h/center.hpp
	libs/font/include/sge/font/align_h/center_fwd.hpp
	libs/font/include/sge/font/align_h/extract_max_width.hpp
	libs/font/include/sge/font/align_h/left.hpp
	libs/font/include/sge/font/align_h/left_fwd.hpp
	libs/font/include/sge/font/align_h/max_width.hpp
	libs/font/include/sge/font/align_h/max_width_fwd.hpp
	libs/font/include/sge/font/align_h/optional_max_width.hpp
	libs/font/include/sge/font/align_h/optional_max_width_fwd.hpp
	libs/font/include/sge/font/align_h/right.hpp
	libs/font/include/sge/font/align_h/right_fwd.hpp
	libs/font/include/sge/font/align_h/variant.hpp
	libs/font/include/sge/font/align_h/variant_fwd.hpp
	libs/font/include/sge/font/char_type.hpp
	libs/font/include/sge/font/dim.hpp
	libs/font/include/sge/font/dim_fwd.hpp
	libs/font/include/sge/font/dpi.hpp
	libs/font/include/sge/font/dpi_fwd.hpp
	libs/font/include/sge/font/dpi_unit.hpp
	libs/font/include/sge/font/exception.hpp
	libs/font/include/sge/font/flags.hpp
	libs/font/include/sge/font/flags_field.hpp
	libs/font/include/sge/font/flags_field_fwd.hpp
	libs/font/include/sge/font/flags_fwd.hpp
	libs/font/include/sge/font/from_fcppt_string.hpp
	libs/font/include/sge/font/height.hpp
	libs/font/include/sge/font/index.hpp
	libs/font/include/sge/font/lit.hpp
	libs/font/include/sge/font/log_location.hpp
	libs/font/include/sge/font/metrics.hpp
	libs/font/include/sge/font/metrics_fwd.hpp
	libs/font/include/sge/font/metrics_output.hpp
	libs/font/include/sge/font/object.hpp
	libs/font/include/sge/font/object_fwd.hpp
	libs/font/include/sge/font/object_unique_ptr.hpp
	libs/font/include/sge/font/optional_dpi.hpp
	libs/font/include/sge/font/optional_dpi_fwd.hpp
	libs/font/include/sge/font/optional_family.hpp
	libs/font/include/sge/font/optional_family_fwd.hpp
	libs/font/include/sge/font/optional_index.hpp
	libs/font/include/sge/font/optional_index_fwd.hpp
	libs/font/include/sge/font/optional_ttf_size.hpp
	libs/font/include/sge/font/optional_ttf_size_fwd.hpp
	libs/font/include/sge/font/parameters.hpp
	libs/font/include/sge/font/parameters_fwd.hpp
	libs/font/include/sge/font/parameters_to_string.hpp
	libs/font/include/sge/font/plugin/collection_fwd.hpp
	libs/font/include/sge/font/plugin/context_fwd.hpp
	libs/font/include/sge/font/plugin/iterator_fwd.hpp
	libs/font/include/sge/font/plugin/object.hpp
	libs/font/include/sge/font/plugin/object_fwd.hpp
	libs/font/include/sge/font/plugin/traits.hpp
	libs/font/include/sge/font/rect.hpp
	libs/font/include/sge/font/rect_fwd.hpp
	libs/font/include/sge/font/string.hpp
	libs/font/include/sge/font/system.hpp
	libs/font/include/sge/font/system_fwd.hpp
	libs/font/include/sge/font/system_unique_ptr.hpp
	libs/font/include/sge/font/text.hpp
	libs/font/include/sge/font/text_fwd.hpp
	libs/font/include/sge/font/text_parameters.hpp
	libs/font/include/sge/font/text_parameters_fwd.hpp
	libs/font/include/sge/font/text_unique_ptr.hpp
	libs/font/include/sge/font/to_fcppt_string.hpp
	libs/font/include/sge/font/ttf_size.hpp
	libs/font/include/sge/font/unit.hpp
	libs/font/include/sge/font/v_center.hpp
	libs/font/include/sge/font/vector.hpp
	libs/font/include/sge/font/vector_fwd.hpp
	libs/font/include/sge/font/view.hpp
	libs/font/include/sge/font/view_fwd.hpp
	libs/font/include/sge/font/weight/bold.hpp
	libs/font/include/sge/font/weight/heavy.hpp
	libs/font/include/sge/font/weight/light.hpp
	libs/font/include/sge/font/weight/medium.hpp
	libs/font/include/sge/font/weight/normal.hpp
	libs/font/include/sge/font/weight/optional_unit.hpp
	libs/font/include/sge/font/weight/optional_unit_fwd.hpp
	libs/font/include/sge/font/weight/semi_bold.hpp
	libs/font/include/sge/font/weight/thin.hpp
	libs/font/include/sge/font/weight/ultra_bold.hpp
	libs/font/include/sge/font/weight/ultra_heavy.hpp
	libs/font/include/sge/font/weight/ultra_light.hpp
	libs/font/include/sge/font/weight/unit.hpp
	libs/font/src/font/added.cpp
	libs/font/src/font/align_h/center.cpp
	libs/font/src/font/align_h/extract_max_width.cpp
	libs/font/src/font/align_h/left.cpp
	libs/font/src/font/align_h/right.cpp
	libs/font/src/font/exception.cpp
	libs/font/src/font/from_fcppt_string.cpp
	libs/font/src/font/log_location.cpp
	libs/font/src/font/metrics.cpp
	libs/font/src/font/metrics_output.cpp
	libs/font/src/font/object.cpp
	libs/font/src/font/parameters.cpp
	libs/font/src/font/parameters_to_string.cpp
	libs/font/src/font/plugin/collection.cpp
	libs/font/src/font/plugin/context.cpp
	libs/font/src/font/plugin/iterator.cpp
	libs/font/src/font/plugin/manager.cpp
	libs/font/src/font/plugin/object.cpp
	libs/font/src/font/plugin/traits.cpp
	libs/font/src/font/system.cpp
	libs/font/src/font/text.cpp
	libs/font/src/font/text_parameters.cpp
	libs/font/src/font/to_fcppt_string.cpp
	libs/font/src/font/v_center.cpp
	libs/font/src/font/weight/bold.cpp
	libs/font/src/font/weight/heavy.cpp
	libs/font/src/font/weight/light.cpp
	libs/font/src/font/weight/medium.cpp
	libs/font/src/font/weight/normal.cpp
	libs/font/src/font/weight/semi_bold.cpp
	libs/font/src/font/weight/thin.cpp
	libs/font/src/font/weight/ultra_bold.cpp
	libs/font/src/font/weight/ultra_heavy.cpp
	libs/font/src/font/weight/ultra_light.cpp
)

find_package(
	mizuiro
	REQUIRED
)

add_sge_base_library(
	font
	SGE_DEPS
		sgecore
		sgelog
		sgeplugin
		sgeimage2d_interface
		sgeimagecolor_interface
	TRANSITIVE_SGE_DEPS
		sgecore
		sgeimage2d_interface
		sgeimagecolor_interface
		sgeplugin_interface
	ADDITIONAL_DEPS
		mizuiro_interface
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
	TRANSITIVE_ADDITIONAL_DEPS
		mizuiro_interface
		fcppt_core_interface
		fcppt_log_interface
	IMPLEMENT_FROM
		plugin
)
